<resources>
    <string name="app_name">SocialVybe</string>

    <!--Messages-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="source_url_not_set">Instagram source URL is not set\nPlease go to config web server to set it first</string>
    <string name="invalid_source_url">Invalid Instagram source URL, please specify a valid URL\nApp will restart when source URL is changed on config website</string>
    <string name="feed_request_error">Error occurred while trying to get user\'s feed data from Instagram\nMake sure the URL is valid</string>
    <string name="exit">Exit</string>
    <string name="go_back_to_main_screen">Go back to main screen</string>
    <string name="wifi_direct_no_info">Can\'t get Wi-Fi Direct info</string>
    <string name="wifi_direct_cant_start">Can\'t start Wi-Fi Direct</string>
    <string name="config_server_cant_start">Config server status: offline. This message will disappear after 60 seconds</string>
    <string name="source_url_error">Can not get valid data from Instagram source URL, please check the URL again</string>
    <string name="getting_p2p_info">Getting Wi-Fi Direct info…</string>
    <string name="wifi_detected">"Wifi detected, app will restart after 10 seconds"</string>
    <string name="wait_for_network">Waiting for network status…\nRemaining time: %d seconds</string>
    <string name="app_info_text">App version: %s\nDevice ID: %s</string>

    <string name="timer_msg_server">This message will disappear in %d seconds</string>
    <string name="timer_msg_retry">Can not get data from Instagram\nRetrying in %d seconds</string>
    <string name="progress_login">Logging in Instagram</string>
    <string name="progress_getting_user_info">Getting data from Instagram</string>
    <string name="progress_done">All done!</string>
    <string name="require_login_code">Require security code</string>

    <!--Preferences keys, summaries and titles-->
    <string name="pref_instagram_source">instagram_source</string>
    <string name="pref_instagram_source_tags">instagram_source_tags</string>
    <string name="pref_instagram_username">instagram_username</string>
    <string name="pref_instagram_password">instagram_password</string>
    <string name="pref_instagram_authenticated">instagram_authenticated</string>
    <string name="pref_excluded_hashtags">excluded_hashtags</string>
    <string name="pref_post_no">post_no</string>
    <string name="pref_is_profile_pic_displayed">is_profile_pic_displayed</string>
    <string name="pref_is_username_displayed">is_username_displayed</string>
    <string name="pref_is_post_likes_displayed">is_post_likes_displayed</string>
    <string name="pref_is_post_comments_displayed">is_post_comments_displayed</string>
    <string name="pref_is_post_caption_displayed">is_post_caption_displayed</string>
    <string name="pref_is_network_strength_displayed">is_network_strength_displayed</string>
    <string name="pref_back_button">back_button</string>
    <string name="pref_instagram_source_summary">Must be a valid Instagram URL</string>
    <string name="pref_instagram_source_title">Instagram source URL</string>
    <string name="pref_excluded_hashtags_summary">Multiple hashtags are separated by commas</string>
    <string name="pref_excluded_hashtags_title">Exclude by hashtags</string>
    <string name="pref_category_presentation_title">Presentation configurations</string>
    <string name="pref_post_no_summary">Use 0 for displaying all available posts</string>
    <string name="pref_post_no_title">Number of posts to display</string>
    <string name="pref_category_visibility_title">Visibility configurations</string>
    <string name="pref_is_profile_pic_displayed_title">User\'s profile picture</string>
    <string name="pref_is_username_displayed_title">Username</string>
    <string name="pref_is_post_likes_displayed_title">Post likes</string>
    <string name="pref_is_post_comments_displayed_title">Post comments</string>
    <string name="pref_is_post_caption_displayed_title">Post Caption</string>
    <string name="pref_category_size_title">Size configurations</string>
    <string name="pref_auto_size">auto_size</string>
    <string name="pref_img_main_width">main_img_width</string>
    <string name="pref_img_main_height">main_img_height</string>
    <string name="pref_img_main_width_title">Main ImageView\'s width</string>
    <string name="pref_img_main_height_title">Main ImageView\'s height</string>
    <string name="pref_img_main_width_summary">Max width is %dpx</string>
    <string name="pref_img_main_height_summary">Max height is %dpx</string>
    <string name="pref_profile_pic_width">profile_pic_width</string>
    <string name="pref_profile_pic_height">profile_pic_height</string>
    <string name="pref_username_text_size">username_text_size</string>
    <string name="pref_like_text_size">like_text_size</string>
    <string name="pref_comment_text_size">comment_text_size</string>
    <string name="pref_caption_text_size">caption_text_size</string>
    <string name="pref_present_interval">present_interval</string>
    <string name="pref_refresh_interval">refresh_interval</string>
    <string name="pref_required_login">required_login</string>
    <string name="pref_required_security_code">required_security_code</string>
    <string name="pref_security_code">security_code</string>
    <string name="pref_wifi_list">wifi_list</string>
    <string name="pref_is_wifi_connected">is_wifi_connected</string>
    <string name="pref_app_id">app_id</string>
    <string name="pref_login_error_msg">login_error_msg</string>
    <string name="pref_internet_available">internet_available</string>

    <!--Intent keys-->
    <string name="login_error_intent_key">loginErrorMsg</string>
</resources>
